# rapidgzip-rs-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING_BACKLOG.md
src/: http_reader.rs  main.rs
