[package]
name = "rapidgzip-cli"
version = "0.1.0"
edition = "2021"
authors = ["Alex"]
description = "Cross-platform command-line decompressor built on top of rapidgzip-rs"
readme = "README.md"

[dependencies]
# Temporary staging dependency. Switch to crates.io or a pinned public git tag
# before the first public GitHub release of this repository.
rapidgzip = { path = "../rapidgzip-rs/crates/rapidgzip" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5.8"
ureq = "3.3.0"
ctrlc = "3.5.2"
tempfile = "3.13"

[dev-dependencies]
flate2 = "1.0"
