[package]
name = "rapidgzip-rs-cli"
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
description = "Cross-platform command-line decompressor built on top of rapidgzip-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseizarubin/rapidgzip-rs-cli"
homepage = "https://github.com/alekseizarubin/rapidgzip-rs-cli"
keywords = ["gzip", "bgzf", "decompression", "cli", "parallel"]
categories = ["command-line-utilities", "compression"]

[[bin]]
name = "rapidgzip-rs-cli"
path = "src/main.rs"

[dependencies]
rapidgzip = "0.1.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5.8"
ureq = "3.3.0"
ctrlc = "3.5.2"
tempfile = "3.13"
bytecount = "0.6"

[dev-dependencies]
flate2 = "1.0"
